--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>Message for you</title> 
-  <link rel="stylesheet" href="style2.css">
-  <head>
-    <body>
-        <form class="styled-form" action="https://formspree.io/f/mldendaq" method="POST">
-            <label class="form-label">
-                response:
-                <textarea name="message" class="form-textarea" placeholder="Write your message here..."></textarea>
-            </label>
-            <button type="submit" class="submit-button">Send</button>
-        </form>
-    </body>
-  </head>
+  <link rel="stylesheet" href="style.css">
+ </head> 
+ <body> 
+  <div class="wrapper"> 
+<h2 class="question">Hi!!! Is it OK if</h2>
+   <h2 class="question">I say something genuine?</h2>
+   <h2 class="question"></h2>
+   <h2 class="question"></h2>
+   <h2 class="question"></h2>
+   <h2 class="question"></h2>
+   <iframe class="img" alt="img" src="https://giphy.com/embed/l3vRiLydJmh7X0Yx2"></iframe>
+    <div class="btn-group"> <button class="yes-btn">Yes</button> <button class="no-btn">No</button> 
+    </div> 
+</div> 
+  </div> 
+  <script src="script.js"></script>
+ </body>
+</html>
